# javy

./: .gitignore  README.md
backend/: .sample.env  chat_history.json  gee_urban_heat.py  irrigation.py  main.py  pyproject.toml  run.py  scraper.py
backend/output/: prompt_1.json  prompt_2.json  prompt_3.json  prompt_4.json  prompt_5.json
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  test.md
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: MainLayout.tsx
frontend/src/pages/: About.tsx  Chat.tsx  Documentation.tsx  History.tsx  Home.tsx  Settings.tsx
